fix edit of item

--- a/templates/index.html
+++ b/templates/index.html
@@ -155,7 +155,7 @@
             {% endfor %}
           </td>
           <td>
-            <a href="/?edit={{ item.id }}" class="text-blue-400 hover:underline">Edit</a> |
+            <a href="/kingcode99?edit={{ item.id }}" class="text-blue-400 hover:underline">Edit</a> |
             <a href="/delete/{{ item.id }}" class="text-red-400 hover:underline">Delete</a>
           </td>
         </tr>
